Fix 140958 -- increase the width of the ok and cancel button not to truncate the Japanses cancel words.

--- a/viewer/org.eclipse.birt.report.viewer/birt/webcontent/birt/styles/dialogbase.css
+++ b/viewer/org.eclipse.birt.report.viewer/birt/webcontent/birt/styles/dialogbase.css
@@ -141,7 +141,7 @@
 	margin-top: 6px; 
 	margin-bottom: 7px; 
 	position: relative; 
-	width: 136px; 
+	width: 166px; 
 	height:22px;
 }
 
@@ -158,7 +158,7 @@
 	float: left;
 	cursor: pointer;
 	height: 22px;
-	width: 65px;
+	width: 80px;
 	overflow: hidden;
 	color: #ffffff; /* Font color */ 
 	background-color: #9C9C9C;
@@ -171,7 +171,7 @@
 	float: left;
 	cursor: default;
 	height: 22px;
-	width: 65px;
+	width: 80px;
 	overflow: hidden;
 	color: #cccccc; /* Font color */
 	background-color: #9C9C9C;
